# markerstudio

./: .env.example  .gitignore  ADMIN.md  HANDOFF.md  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/workflows/: db-backup.yml  desktop-release.yml
app/: account-actions.ts  ai-actions.ts  careers-actions.ts  consent-actions.ts  contact-actions.ts  globals.css  layout.tsx  manifest.ts  meta-actions.ts  onboarding-actions.ts  opengraph-image.tsx  page.tsx  passkey-actions.ts  portal-doc-actions.ts  portal-feedback-actions.ts  robots.ts  sitemap.ts
app/account/security/: page.tsx
app/admin/: actions.ts  consent-actions.ts  doc-actions.ts  error.tsx  fill-actions.ts  invoice-actions.ts  layout.tsx  loading.tsx  page.tsx  undo-actions.ts
app/admin/accounts/: page.tsx
app/admin/agenda/: actions.ts  page.tsx
app/admin/agreements/: page.tsx
app/admin/applications/: page.tsx
app/admin/backfill/: actions.ts  page.tsx  plan.ts
app/admin/clients/: page.tsx  section-actions.ts
app/admin/consents/: page.tsx
app/careers/: page.tsx
app/forgot/: page.tsx
app/login/: page.tsx
app/onboarding/: page.tsx
app/pet/: page.tsx
app/portal/: error.tsx  layout.tsx  page.tsx
components/: AgreementSign.tsx  CareersForm.tsx  ConsentSign.tsx  ContactForm.tsx  DegradedBanner.tsx  EnablePushButton.tsx  FileUpload.tsx  Logo.tsx  MarkerSite.tsx  OnboardingForm.tsx  PortalTabs.tsx  PortalView.module.css  PortalView.tsx  Pricing.tsx  PrintButton.tsx  ProjectView.tsx  Reveal.tsx  ServiceWalkthrough.tsx  SignaturePad.tsx  SocialCalendar.tsx  SwOffline.tsx
components/admin/: AdminNav.tsx  AdminShell.tsx  AgendaView.tsx  AiAnalysisPanel.tsx  ClientAdminTabs.tsx  ClientForm.tsx  ClientSelectOrType.tsx  ClientsGrid.tsx  CommandK.tsx  ConfirmButton.tsx  ConsentLinkActions.tsx  FinanceTabs.tsx  FlightOverlay.tsx  InviteList.tsx  InvoiceCreateFromTab.tsx  InvoiceEditForm.tsx  InvoiceEditor.tsx  InvoiceStatusSelect.tsx  ModelingSessionForm.tsx  NoteMarkdown.tsx  NotesApp.tsx  NotificationBell.tsx  NotifyComposer.tsx  OnboardingBriefActions.tsx  Pet.tsx  PetWindow.tsx  PhotographerStatusButton.tsx  PortalEditor.tsx  PricingEditor.tsx  ProjectForm.tsx  ProposalTimelineEditor.tsx  RecordPayment.tsx  RecordPaymentForm.tsx  ResetLinkList.tsx  TodayAgenda.tsx  UndoBanner.tsx  noteEditing.ts  petChat.tsx
components/auth/: PasskeyLoginButton.tsx  PasskeyManager.tsx
components/docs/: AgreementDocument.tsx  ProposalDocument.tsx  StatementDocument.tsx  doc.css  rich.tsx
components/ui/: cinematic-landing-hero.tsx  glass.tsx  pixel-logo-grid.tsx  sign-in.tsx  story-scroll.tsx
db/: schema.sql
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKUPS.md  PLATFORM-PLAN.md
lib/: accounts.ts  agenda.ts  agreement.ts  ai.ts  aiPrompt.ts  applications.ts  auth.ts  backfill.ts  blobName.ts  clientFinance.ts  clientNotify.ts  clients.ts  consent-copy.ts  consents.ts  content.ts  dashboard.ts  db.ts  deliverables.ts  docCapture.ts  docs.ts  finance.ts  inquiries.ts  invoices.ts  meta.ts  modelingSessions.ts  money.ts  noteHtml.ts  notes.ts  notifications.ts  notion.ts  notionSync.ts  notionTasks.ts  payments.ts  petBrain.ts  photo.ts  portalCsv.ts  projects.ts  push.ts  pushClient.ts  reminders.ts  (+11 more)
public/: sw.js
(+92 files in other folders)
