[package]
name = "marker-admin"
version = "0.3.0"
description = "Marker Studio admin portal — macOS wrapper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "marker_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native Touch ID / Face ID gate on launch (macOS only). Scoped to macOS so the
# crate's other-platform backends never enter the build.
[target.'cfg(target_os = "macos")'.dependencies]
robius-authentication = "0.1.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
