[package]
name = "marker-admin"
version = "0.5.3"
description = "Marker Studio admin portal — macOS wrapper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "marker_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System notifications + opening links in the default browser, both driven by
# the site through the __MARKER_NATIVE__ bridge (see src/lib.rs).
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
# Native macOS behaviours: the save panel behind text exports, and windows
# that remember their size/position across launches.
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
# Self-updating: checks marker.ps for a newer signed build on launch.
# Dormant until the updater keypair is configured — see the README recipe.
tauri-plugin-updater = "2"
# Decoding the site's binary downloads (PDF/image exports) for native saves.
base64 = "0.22"

# macOS-only natives: the Touch ID / Face ID check that guards the saved
# sign-in, and the Keychain entry it protects. Scoped to macOS so the crates'
# other-platform backends never enter the build.
[target.'cfg(target_os = "macos")'.dependencies]
robius-authentication = "0.1.1"
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
